manifest/objects/SBQQ__Theme__c.object
<CustomObject>
    <customHelpPage>SBQQ__ThemeHelp</customHelpPage>
    <fields>
        <fullName>SBQQ__AccentIconDisabledFontColor__c</fullName>
        <label>Icon Disabled Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AccentIconFontColor__c</fullName>
        <label>Icon Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AccentIconHoverFontColor__c</fullName>
        <label>Icon Hover Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BadgeBackgroundColor__c</fullName>
        <inlineHelpText>Background color of badges</inlineHelpText>
        <label>Badge Background Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BadgeBorderColor__c</fullName>
        <inlineHelpText>Border color of badges</inlineHelpText>
        <label>Badge Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BadgeBorderStyle__c</fullName>
        <inlineHelpText>Border style of badges (Click the icon for additional information)</inlineHelpText>
        <label>Badge Border Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>hidden</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashed</fullName>
                </value>
                <value>
                    <fullName>solid</fullName>
                    <default>true</default>
                    <label>solid</label>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>grove</fullName>
                </value>
                <value>
                    <fullName>ridge</fullName>
                </value>
                <value>
                    <fullName>inset</fullName>
                </value>
                <value>
                    <fullName>outset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BadgeBorderWidth__c</fullName>
        <inlineHelpText>Border width of badges</inlineHelpText>
        <label>Badge Border Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BadgeFontColor__c</fullName>
        <inlineHelpText>Font color of badges</inlineHelpText>
        <label>Badge Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BadgeFontFamily__c</fullName>
        <inlineHelpText>Font family of badges</inlineHelpText>
        <label>Badge Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BadgeFontSize__c</fullName>
        <inlineHelpText>Font size of badges</inlineHelpText>
        <label>Badge Font Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BrandButtonBorderColor__c</fullName>
        <inlineHelpText>Border color of brand buttons</inlineHelpText>
        <label>Brand Button Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BrandButtonDisabledFontColor__c</fullName>
        <inlineHelpText>Font color of disabled brand buttons</inlineHelpText>
        <label>Brand Button Disabled Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BrandButtonFontFamily__c</fullName>
        <inlineHelpText>Font family for brand buttons</inlineHelpText>
        <label>Brand Button Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BrandButtonHoverFontColor__c</fullName>
        <inlineHelpText>Hover font color of brand buttons</inlineHelpText>
        <label>Brand Button Hover Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundleLayoutHeaderBgColor__c</fullName>
        <inlineHelpText>Background color of the header displaying the bundle name</inlineHelpText>
        <label>Bundle Layout Header Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundleLayoutHeaderColor__c</fullName>
        <inlineHelpText>Font color of the header displaying the bundle name</inlineHelpText>
        <label>Bundle Layout Header Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundleLayoutHeaderFontFamily__c</fullName>
        <inlineHelpText>Font family of the header displaying the bundle name</inlineHelpText>
        <label>Bundle Layout Header Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BundleLayoutHeaderFontSize__c</fullName>
        <inlineHelpText>Font size of the header displaying the bundle name</inlineHelpText>
        <label>Bundle Layout Header Font Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundleLayoutHeaderFontStyle__c</fullName>
        <inlineHelpText>Font style of the header displaying the bundle name (Click the icon for additional information)</inlineHelpText>
        <label>Bundle Layout Header Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>italic</fullName>
                </value>
                <value>
                    <fullName>oblique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BundleLayoutHeaderFontWeight__c</fullName>
        <inlineHelpText>Font weight of the header displaying the bundle name (Click the icon for additional information)</inlineHelpText>
        <label>Bundle Layout Header Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                    <default>true</default>
                    <label>300</label>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BundleLayoutHeaderTextDecoration__c</fullName>
        <inlineHelpText>Decoration added to text in the header displaying the bundle name (Click the icon for additional information)</inlineHelpText>
        <label>Bundle Layout Header Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>underline</fullName>
                </value>
                <value>
                    <fullName>overline</fullName>
                </value>
                <value>
                    <fullName>line-through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CheckboxBackgroundColorChecked__c</fullName>
        <inlineHelpText>Background color of checked checkboxes</inlineHelpText>
        <label>Checkbox Background Color Checked</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CheckboxBackgroundColorUnchecked__c</fullName>
        <inlineHelpText>Background color of unchecked checkboxes</inlineHelpText>
        <label>Checkbox Background Color Unchecked</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CheckboxBorderColor__c</fullName>
        <inlineHelpText>Border color of checkboxes</inlineHelpText>
        <label>Checkbox Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CheckboxBorderRadius__c</fullName>
        <inlineHelpText>Border radius of checkboxes</inlineHelpText>
        <label>Checkbox Border Radius</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CheckboxBorderStyle__c</fullName>
        <inlineHelpText>Border style of checkboxes</inlineHelpText>
        <label>Checkbox Border Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>hidden</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashed</fullName>
                </value>
                <value>
                    <fullName>solid</fullName>
                    <default>true</default>
                    <label>solid</label>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>grove</fullName>
                </value>
                <value>
                    <fullName>ridge</fullName>
                </value>
                <value>
                    <fullName>inset</fullName>
                </value>
                <value>
                    <fullName>outset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CheckboxBorderWidth__c</fullName>
        <inlineHelpText>Border width of checkboxes</inlineHelpText>
        <label>Checkbox Border Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CheckboxCheckMarkColor__c</fullName>
        <inlineHelpText>Checkmark color of checkboxes</inlineHelpText>
        <label>Checkbox Checkmark Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CheckboxSize__c</fullName>
        <inlineHelpText>Size of checkboxes</inlineHelpText>
        <label>Checkbox Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompiledCSS__c</fullName>
        <label>Hidden Values</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentRowFontColor__c</fullName>
        <inlineHelpText>Font color of component rows in quote line editor</inlineHelpText>
        <label>Component Row Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentRowFontStyle__c</fullName>
        <inlineHelpText>Font style of component rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Component Row Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>italic</fullName>
                </value>
                <value>
                    <fullName>oblique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentRowFontWeight__c</fullName>
        <inlineHelpText>Font weight of component rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Component Row Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                    <default>true</default>
                    <label>400</label>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentRowTextDecoration__c</fullName>
        <inlineHelpText>Decoration added to text of component rows in quote line editor (Click the icon for additional information)</inlineHelpText>
        <label>Component Row Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>underline</fullName>
                </value>
                <value>
                    <fullName>overline</fullName>
                </value>
                <value>
                    <fullName>line-through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationAttributeLabelColor__c</fullName>
        <inlineHelpText>Label color for configuration attributes</inlineHelpText>
        <label>Configuration Attribute Label Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguratorCustomActionBorderColor__c</fullName>
        <inlineHelpText>Border color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguratorCustomActionColor__c</fullName>
        <inlineHelpText>Background color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Background Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguratorCustomActionFontColor__c</fullName>
        <inlineHelpText>Font color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguratorCustomActionHoverColor__c</fullName>
        <inlineHelpText>Hover color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguratorCustomActionHoverFontColor__c</fullName>
        <inlineHelpText>Hover font color of configurator custom actions</inlineHelpText>
        <label>Config Custom Action Hover Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DetailColor__c</fullName>
        <inlineHelpText>Background color of filter side panels</inlineHelpText>
        <label>Filter Drawer Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogBackgroundColor__c</fullName>
        <inlineHelpText>Background color of pop-up modals</inlineHelpText>
        <label>Dialog Background Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogBorderRadius__c</fullName>
        <inlineHelpText>Border radius of pop-up modal</inlineHelpText>
        <label>Dialog Border Radius</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogCloseColor__c</fullName>
        <inlineHelpText>Color of pop-up modals on close</inlineHelpText>
        <label>Dialog Close Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogFontFamily__c</fullName>
        <inlineHelpText>Font family of pop-up modals</inlineHelpText>
        <label>Dialog Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DialogFooterBorderColor__c</fullName>
        <inlineHelpText>Border color of pop-up modal footer</inlineHelpText>
        <label>Dialog Footer Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogFooterBorderStyle__c</fullName>
        <inlineHelpText>Border style of pop-up modal footer (Click the icon for additional information)</inlineHelpText>
        <label>Dialog Footer Border Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>hidden</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashed</fullName>
                </value>
                <value>
                    <fullName>solid</fullName>
                    <default>true</default>
                    <label>solid</label>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>grove</fullName>
                </value>
                <value>
                    <fullName>ridge</fullName>
                </value>
                <value>
                    <fullName>inset</fullName>
                </value>
                <value>
                    <fullName>outset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DialogFooterBorderWidth__c</fullName>
        <inlineHelpText>Border width of pop-up modal footer</inlineHelpText>
        <label>Dialog Footer Border Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogFooterColor__c</fullName>
        <inlineHelpText>Background color of pop-up modal footer</inlineHelpText>
        <label>Dialog Footer Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogHeaderBorderColor__c</fullName>
        <inlineHelpText>Border color of pop-up modal header</inlineHelpText>
        <label>Dialog Header Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogHeaderBorderStyle__c</fullName>
        <inlineHelpText>Border style of pop-up modal header (Click the icon for additional information)</inlineHelpText>
        <label>Dialog Header Border Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>hidden</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashed</fullName>
                </value>
                <value>
                    <fullName>solid</fullName>
                    <default>true</default>
                    <label>solid</label>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>grove</fullName>
                </value>
                <value>
                    <fullName>ridge</fullName>
                </value>
                <value>
                    <fullName>inset</fullName>
                </value>
                <value>
                    <fullName>outset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DialogHeaderBorderWidth__c</fullName>
        <inlineHelpText>Border width of pop-up modal header</inlineHelpText>
        <label>Dialog Header Border Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogHeaderPaddingBottom__c</fullName>
        <inlineHelpText>Bottom padding of pop-up modal header</inlineHelpText>
        <label>Dialog Header Bottom Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogHeaderPaddingLeft__c</fullName>
        <inlineHelpText>Left padding of pop-up modal header</inlineHelpText>
        <label>Dialog Header Left Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogHeaderPaddingRight__c</fullName>
        <inlineHelpText>Right padding of pop-up modal header</inlineHelpText>
        <label>Dialog Header Right Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogHeaderPaddingTop__c</fullName>
        <inlineHelpText>Top padding of pop-up modal header</inlineHelpText>
        <label>Dialog Header Top Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DialogMaskColor__c</fullName>
        <inlineHelpText>Color of pop-up modal masks</inlineHelpText>
        <label>Dialog Mask Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DocumentId__c</fullName>
        <label>Legacy Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsColor__c</fullName>
        <inlineHelpText>Font color of additional instructions displayed under feature name</inlineHelpText>
        <label>Feature Instructions Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
</CustomObject>